fix(a11y): fix issue with the color contrast in the footer

--- a/src/app.css
+++ b/src/app.css
@@ -10,6 +10,9 @@
   --font-barlow: 'Barlow', sans-serif;
   --font-heebo: 'Heebo', sans-serif;
 
+  --color-primary: #02abb2;
+  --color-secondary: #007b80;
+
   --color-guru: #e11d48;
   --color-advanced: #f97316;
   --color-intermediate: #fbbf24;
